--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,12 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 {% block head %}{% endblock %}
 
-<section class="content">
-{% block content %}{% endblock %}
+{% block banner %}{% endblock %}
 
+<section class="content">
 {% for msg in get_flashed_messages() %}
   <div class="flash">{{ msg }}</div>
 {% endfor %}
+
+{% block content %}{% endblock %}
 </section>
