--- a/templates/create.html
+++ b/templates/create.html
@@ -2,25 +2,33 @@
 
 {% block head %}
 <link rel="stylesheet" href="{{ url_for('static', filename='pygments.css') }}">
+<script src="{{ url_for('static', filename='createform.js') }}"></script>
 {% endblock %}
 
-{% block content %}
+{% block banner %}
 <header>
   <nav id="searchbar">
-    <form method="post" id="search-form">
-      <p>
-        <span id="logo">
-          <a href="/">Lucid RSS</a>
-        </span>
-      </p>
-    </form>
+    <p>
+      <span id="logo">
+        <a href="/">Lucid RSS</a>
+      </span>
+    </p>
   </nav>
 </header>
+{% endblock %}
 
 
+{% block content %}
 <p>It's time to get creative!</p>
 
 <div class="code">
     {{html | safe}}
 </div>
+
+<form id="template">
+  <textarea name="input-template"></textarea>
+  <textarea name="output-template"></textarea>
+  <button type="button" onclick="loadPreview()" name="preview" value="preview">Preview</button>
+</form>
+
 {% endblock %}
