add some basic LLM functionality

--- a/templates/create.html
+++ b/templates/create.html
@@ -29,6 +29,7 @@
   <textarea name="input-template"></textarea>
   <textarea name="output-template"></textarea>
   <button type="button" onclick="loadPreview()" name="preview" value="preview">Preview</button>
+  <button type="button" onclick="getHint()" name="hint" value="hint">AI Completion</button>
 </form>
 
 {% endblock %}
